# CSCI191T-Game-Project

./: .gitignore  CMakeLists.txt  GameProj_MSIC.cbp  GameProj_MSIC.depend  GameProj_MSIC.layout  Lesson15_MSIC.depend  et  main.cpp  readme.txt
gamedata/: items.txt
include/: _3dmodelloader.h  _Enemy.h  _EnemyHandler.h  _FileLoader.h  _bullets.h  _camera.h  _capsule.h  _capsuleHandler.h  _collisioncheck.h  _common.h  _help.h  _hud.h  _inventory.h  _item.h  _level1.h  _level2.h  _level3.h  _level4.h  _menu.h  _model.h  _player.h  _scene.h  _scenemanager.h  _skybox.h  _sounds.h  _sprite.h  _timer.h  inventory.h
include/Combat/: _Enemy.h  _EnemyHandler.h  _bullets.h  _capsule.h  _capsuleHandler.h  _waveHandler.h
include/Graphics/: _3dmodelloader.h  _model.h  _parallax.h  _skybox.h  _sprite.h  _textureloader.h
include/Player/: _inventory.h  _item.h  _player.h
include/Scenes/: _help.h  _level1.h  _level2.h  _level3.h  _level4.h  _menu.h
include/UI/: _hud.h  _inputs.h
src/: _3dmodelloader.cpp  _Enemy.cpp  _EnemyHandler.cpp  _FileLoader.cpp  _bullets.cpp  _camera.cpp  _capsule.cpp  _capsuleHandler.cpp  _collisioncheck.cpp  _help.cpp  _hud.cpp  _inputs.cpp  _inventory.cpp  _item.cpp  _level1.cpp  _level2.cpp  _level3.cpp  _level4.cpp  _menu.cpp  _parallax.cpp  _player.cpp  _scene.cpp  _scenemanager.cpp  _skybox.cpp  _sounds.cpp  _sprite.cpp  _textureloader.cpp  _timer.cpp  _waveHandler.cpp
src/Combat/: _Enemy.cpp  _EnemyHandler.cpp  _bullets.cpp  _capsule.cpp  _capsuleHandler.cpp  _waveHandler.cpp
src/Graphics/: _3dmodelloader.cpp  _light.cpp  _model.cpp  _parallax.cpp  _skybox.cpp  _sprite.cpp  _textureloader.cpp
src/Player/: _inventory.cpp  _item.cpp  _player.cpp
src/Scenes/: _help.cpp  _level1.cpp  _level2.cpp  _level3.cpp  _level4.cpp  _menu.cpp  _scene.cpp
src/UI/: _camera.cpp  _hud.cpp  _inputs.cpp
